UI related changes done.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
+<html lang="en" data-mdb-theme="light">
 
 <head>
   <meta charset="utf-8" />
@@ -15,6 +15,7 @@
 <body class="bg-body-tertiary">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
 </body>
 
 </html>
