--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <title>College Portal</title>
 </head>
 
-<body class="bg-body-tertiary">
+<body class="bg-body-tertiary d-flex flex-column min-vh-100">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
