Mobile related UI changes done.

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
   <script src="%PUBLIC_URL%/js/popper.min.js"></script>
   <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
   <script src="%PUBLIC_URL%/js/mdb.js"></script>
+  <script src="%PUBLIC_URL%/js/charts/index.js"></script>
+  <script src="%PUBLIC_URL%/js/charts/xy.js"></script>
+  <script src="%PUBLIC_URL%/js/charts/percent.js"></script>
+  <script src="%PUBLIC_URL%/js/charts/Animated.js"></script>
 </body>
 
 </html>
